# libares

./: Makefile.in  NEWS  README  adig.c  ahost.c  ares.h  ares__close_sockets.c  ares__get_hostent.c  ares__read_line.c  ares_destroy.3  ares_destroy.c  ares_dns.h  ares_expand_name.3  ares_expand_name.c  ares_fds.3  ares_fds.c  ares_free_dns_message.3  ares_free_dns_message.c  ares_free_errmem.3  ares_free_errmem.c  ares_free_hostent.3  ares_free_hostent.c  ares_free_string.3  ares_free_string.c  ares_gethostbyaddr.3  ares_gethostbyaddr.c  ares_gethostbyname.3  ares_gethostbyname.c  ares_init.3  ares_init.c  ares_init_options.3  ares_mkquery.3  ares_mkquery.c  ares_parse_a_reply.3  ares_parse_a_reply.c  ares_parse_message.3  ares_parse_message.c  ares_parse_ptr_reply.3  ares_parse_ptr_reply.c  ares_private.h  (+15 more)
